--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -119,4 +119,13 @@
     width: 100%;
     flex-direction: column;
   }
+  .title {
+    margin: 0;
+    line-height: 1.15;
+    font-size: 2rem;
+  }
+}
+
+.form_15iP5 {
+  margin-top: 0;
 }
