actual responsive design with fixed iframe

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -124,9 +124,14 @@
     line-height: 1.15;
     font-size: 2rem;
   }
+
+  #iframe {
+    width: auto;
+  }
+
 }
 
-@media (min-width: 600px) {
+@media (min-width: 1044px) {
   .flexContainer {
     display: flex;
     flex-direction: column;
