--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,7 +30,14 @@ iframe {
   display: flex;
   margin: auto;
   width: 100%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  border-radius: 40px;
+  transition: 0.3s;
   /* width: "600px" */
+}
+
+iframe:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 @media (min-width: 600px) {
